WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84258
Fix potential null pointer dereference in RuleSet::addRulesFromSheet().
https://bugs.webkit.org/show_bug.cgi?id=84258
Summary
Fix potential null pointer dereference in RuleSet::addRulesFromSheet().
Luke Macpherson
Reported
2012-04-18 11:12:47 PDT
Fix potential null pointer dereference in RuleSet::addRulesFromSheet().
Attachments
Patch
(1.73 KB, patch)
2012-04-18 11:15 PDT
,
Luke Macpherson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Luke Macpherson
Comment 1
2012-04-18 11:15:09 PDT
Created
attachment 137727
[details]
Patch
WebKit Review Bot
Comment 2
2012-04-19 11:20:24 PDT
Comment on
attachment 137727
[details]
Patch Clearing flags on attachment: 137727 Committed
r114655
: <
http://trac.webkit.org/changeset/114655
>
WebKit Review Bot
Comment 3
2012-04-19 11:20:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug