Fix potential null pointer dereference in RuleSet::addRulesFromSheet(). https://bugs.webkit.org/show_bug.cgi?id=84258

Reviewed by Andreas Kling.

Fix variable that is dereferenced without null check here, but checked in code above and below.

No new test / code cleanup from coverity analysis.

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::collectMatchingRulesForList):


Canonical link: https://commits.webkit.org/101854@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114655 268f45cc-cd09-0410-ab3c-d52691b4dbfc